# buscar_setores_da_bolsa

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  site_packages.py
.github/workflows/: ci.yml
app/: main.py  main_request.py  step_download.py  step_read.py
data/: Analise_Fundamentalista_BR.xlsx
