[tool.poetry]
name = "proj-fundamentalista"
version = "0.1.0"
description = "Buscar na internet a classificação de todas as ações da bolsa"
authors = ["Patrick Verol"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.2.0"
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
mkdocs = "^1.5.3"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue ."
kill = "kill -9 $(lsof -t -i :8000)"
test = "poetry run pytest -v"
run = "python3 app/main.py"